[project]
name = "gribcoder"
version = "0.2.1"
description = "Add your description here"
authors = [
    { name = "Noritada Kobayashi", email = "noritada.kobayashi@gmail.com" }
]
dependencies = [
    "nptyping>=2.3",
    "numpy>=1.17",
]
readme = "README.md"
requires-python = ">=3.8,<3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=22",
    "flake8>=5",
    "isort>=5",
    "pytest>=7.1.3",
    "mypy>=1.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
