[project]
name = "gribcoder"
description = "Add your description here"
authors = [
    { name = "Noritada Kobayashi", email = "noritada.kobayashi@gmail.com" },
]
dependencies = [
    "nptyping>=2.3",
    "numpy>=1.17",
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=22",
    "flake8>=5",
    "isort>=5",
    "mypy>=1.4.1",
    "pytest>=7.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "gribcoder/__init__.py"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
